--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -40,7 +40,7 @@ else
 
 @code
 {
-    private readonly GameClients _client = new();
+    private readonly GamesClient _client = new();
 
     private GameSummary[]? _games;
 
