--- a/GameStore.Frontend/Components/Layout/NavMenu.razor
+++ b/GameStore.Frontend/Components/Layout/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand mb-0 h1" href="#">Game Store</a>
+        <a class="navbar-brand mb-0 h1" href="/">Game Store</a>
     </div>
 </nav>
