--- a/GameStore.Frontend/Components/Pages/EditGame.razor
+++ b/GameStore.Frontend/Components/Pages/EditGame.razor
@@ -1,6 +1,8 @@
 ﻿@page "/edit-game"
+@inject NavigationManager NavigationManager
+@inject GamesClient GamesClient
 
-<PageTitle>New Gate</PageTitle>
+<PageTitle>New Game</PageTitle>
 <h3>New Game</h3>
 
 @if (_genres is null)
@@ -16,7 +18,7 @@ else
             <EditForm Model="@Game" FormName="editGame" OnSubmit="HandleSubmit">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name:</label>
-                    <InputText class="form-control" id="name" @bind-value="Game.Name"/>
+                    <InputText class="form-control" id="name" @bind-value="Game.Name" />
                 </div>
                 <div class="mb-3">
                     <label for="genre" class="form-label">Genre:</label>
@@ -30,13 +32,14 @@ else
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label">Price:</label>
-                    <InputNumber step=".01" class="form-control" id="price" @bind-value="Game.Price"/>
+                    <InputNumber step=".01" class="form-control" id="price" @bind-value="Game.Price" />
                 </div>
                 <div class="mb-3">
                     <label for="releaseDate" class="form-label">Release Date:</label>
-                    <InputDate class="form-control" id="releaseDate" @bind-value="Game.ReleaseDate"/>
+                    <InputDate class="form-control" id="releaseDate" @bind-value="Game.ReleaseDate" />
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <a role="button" class="btn btn-secondary" href="/">Cancel</a>
             </EditForm>
         </div>
     </div>
@@ -54,7 +57,6 @@ else
     };
 
     private readonly GenresClient _genresClient = new();
-    private readonly GamesClient _gamesClient = new();
     private Genre[]? _genres;
 
     protected override void OnInitialized()
@@ -65,7 +67,8 @@ else
 
     private void HandleSubmit()
     {
-        _gamesClient.AddGame(Game);
+        GamesClient.AddGame(Game);
+        NavigationManager.NavigateTo("/");
     }
 
 }
