--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -1,6 +1,11 @@
 ﻿@page "/"
+@inject GamesClient GamesClient
 
 <PageTitle>Game Catalog</PageTitle>
+
+<div class="mt-2">
+    <a class="btn btn-primary" role="button" href="/edit-game">New Game</a>
+</div>
 
 @if (_games is null)
 {
@@ -15,23 +20,23 @@ else
     <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover mt-2">
             <thead class="table-dark">
-            <th>ID</th>
-            <th>Name</th>
-            <th>Genre</th>
-            <th class="text-end">Price</th>
-            <th>Release Date</th>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Genre</th>
+                <th class="text-end">Price</th>
+                <th>Release Date</th>
             </thead>
             <tbody>
-            @foreach (var game in _games)
-            {
-                <tr>
-                    <td>@game.Id</td>
-                    <td>@game.Name</td>
-                    <td>@game.Genre</td>
-                    <td class="text-end">@game.Price.ToString("C2")</td>
-                    <td>@game.ReleaseDate.ToString()</td>
-                </tr>
-            }
+                @foreach (var game in _games)
+                {
+                    <tr>
+                        <td>@game.Id</td>
+                        <td>@game.Name</td>
+                        <td>@game.Genre</td>
+                        <td class="text-end">@game.Price.ToString("C2")</td>
+                        <td>@game.ReleaseDate.ToString()</td>
+                    </tr>
+                }
             </tbody>
         </table>
     </div>
@@ -40,13 +45,11 @@ else
 
 @code
 {
-    private readonly GamesClient _client = new();
-
     private GameSummary[]? _games;
 
     protected override void OnInitialized()
     {
-        _games = _client.GetGames();
+        _games = GamesClient.GetGames();
         base.OnInitialized();
     }
 }
