--- a/GameStore.Frontend/Components/App.razor
+++ b/GameStore.Frontend/Components/App.razor
@@ -2,21 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <ResourcePreloader />
-    <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["GameStore.Frontend.styles.css"]" />
-    <link rel="stylesheet" href="@Assets[key: "bootstrap.min.css"]" />
-    <ImportMap />
-    <HeadOutlet />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <base href="/"/>
+    <ResourcePreloader/>
+    <link rel="stylesheet" href="@Assets["app.css"]"/>
+    <link rel="stylesheet" href="@Assets["GameStore.Frontend.styles.css"]"/>
+    <link rel="stylesheet" href="@Assets["bootstrap.min.css"]"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <ImportMap/>
+    <HeadOutlet/>
 </head>
 
 <body>
-    <Routes />
-    <script src="@Assets["_framework/blazor.web.js"]"></script>
-    <script src="@Assets[key: "bootstrap.bundle.min.js"]"></script>
+<Routes/>
+<script src="@Assets["_framework/blazor.web.js"]"></script>
+<script src="@Assets["bootstrap.bundle.min.js"]"></script>
 </body>
 
 </html>
