--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -20,27 +20,30 @@ else
     <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover mt-2">
             <thead class="table-dark">
-                <th>ID</th>
-                <th>Name</th>
-                <th>Genre</th>
-                <th class="text-end">Price</th>
-                <th>Release Date</th>
+            <th></th>
+            <th>Name</th>
+            <th>Genre</th>
+            <th class="text-end">Price</th>
+            <th>Release Date</th>
             </thead>
-            <tbody>
-                @foreach (var game in _games)
-                {
-                    <tr>
-                        <td>@game.Id</td>
-                        <td>@game.Name</td>
-                        <td>@game.Genre</td>
-                        <td class="text-end">@game.Price.ToString("C2")</td>
-                        <td>@game.ReleaseDate.ToString()</td>
-                    </tr>
-                }
+            <tbody class="table-group-divider">
+            @foreach (var game in _games)
+            {
+                <tr>
+                    @* <td>@game.Id</td> *@
+                    <td>
+                        <a href="/edit-game/@game.Id"><i class="bi bi-pencil-fill text-success"></i></a>
+                        <a role="button"><i class="bi bi-trash-fill text-danger"></i></a>
+                    </td>
+                    <td>@game.Name</td>
+                    <td>@game.Genre</td>
+                    <td class="text-end">@game.Price.ToString("C2")</td>
+                    <td>@game.ReleaseDate.ToString()</td>
+                </tr>
+            }
             </tbody>
         </table>
     </div>
-
 }
 
 @code
