--- a/GameStore.Frontend/Components/Pages/DeleteGame.razor
+++ b/GameStore.Frontend/Components/Pages/DeleteGame.razor
@@ -1,5 +1,6 @@
 @inject GamesClient GamesClient
 @inject NavigationManager NavigationManager
+@rendermode InteractiveServer
 
 <div class="modal fade" id="@GetModalId(Game)" tabindex="-1" aria-labelledby="@GetModalId(Game)" aria-hidden="true">
   <div class="modal-dialog">
@@ -7,13 +8,12 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">@GetModalTitle(Game)</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
-                  @onclick="@Confirm">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
           </button>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Delete</button>
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal" @onclick="@Confirm">Delete</button>
         </div>
       </div>
     </div>
