--- a/GameStore.Frontend/Components/Pages/DeleteGame.razor
+++ b/GameStore.Frontend/Components/Pages/DeleteGame.razor
@@ -13,7 +13,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal" @onclick="@Confirm">Delete</button>
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal" @onclick="@ConfirmAsync">Delete</button>
         </div>
       </div>
     </div>
@@ -27,10 +27,10 @@
 
   public static string GetModalTitle(GameSummary? game) => $"Do you want to delete {game?.Name}?";
 
-  private void Confirm()
+  private async Task ConfirmAsync()
   {
     if (Game is null) return;
-    GamesClient.DeleteGame(Game.Id);
+    await GamesClient.DeleteGameAsync(Game.Id);
     NavigationManager.NavigateTo("/");
   }
 
