feat(edit-game): :sparkles: enhance EditForm with async capabilities
* Added 'Enhance' attribute to EditForm for improved performance and user experience.
* Introduced StringConverter for better JSON handling of string values.
* Updated project file to include Converters folder for organization.

--- a/GameStore.Frontend/Components/Pages/EditGame.razor
+++ b/GameStore.Frontend/Components/Pages/EditGame.razor
@@ -19,7 +19,7 @@ else
 {
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <EditForm Model="@Game" FormName="editGame" OnValidSubmit="HandleSubmitAsync">
+            <EditForm Model="@Game" FormName="editGame" OnValidSubmit="HandleSubmitAsync" Enhance>
                 <DataAnnotationsValidator />
 
                 <div class="mb-3">
